# deribit-trader

./: .gitignore  CMakeLists.txt  README.md  func.hpp  trader.cpp  wssheader.hpp
